update thread to use virtual thread for light weight and non blocking